crates/crane/src/snapshots/crane__compiler__tests__mixed_case_union_name.snap
---
source: crates/crane/src/compiler.rs
expression: "&stderr"
---
Error: A type error occurred.
   ╭─[mixed_case.crane:1:2]
   │
 1 │ union XMLHttpRequest {
   │       ───────┬──────  
   │              ╰──────── Union names must be written in PascalCase.
   │              │        
   │              ╰──────── Try writing it as `XmlHttpRequest` instead.
───╯

